--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>web-project2-2</artifactId>
+    <artifactId>WEBPROJECT2-3</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>1120_demo</name>
     <packaging>war</packaging>
